--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ svg{
     height: 25px;
 }
 .logo{
-    padding: 30px 0;
+    padding: 50px 0;
 }
 .logo img{
     display: block;
@@ -122,6 +122,7 @@ input{
     text-decoration: none;
 }
 .languages{
+    height: 100px;
     padding: 50px 0;
     text-align: center;
 }
@@ -134,6 +135,9 @@ input{
 }
 footer{
     background: #f2f2f2;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 .country{
     padding: 15px 30px;
@@ -144,18 +148,19 @@ footer{
 }
 .carbon{
     text-align: center;
-    padding: 10px 0;
+    padding: 15px 0;
     color: #70757a;
 }
 .carbon img{
-    height: 15px;
+    height: 10px;
     margin-right: 6px;
 }
 .footer-links{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 10px 0 10px 0;;
+    padding: 10px;
+    text-align: center;
 }
 footer a, button{
     color: #70757a;
@@ -182,22 +187,52 @@ footer a:hover, footer button:hover{
     input{
         width: 387px;
     }
+    footer{
+        position: fixed;
+        bottom: 0;
+    }
     .footer-links{
         flex-direction: column;
         flex-wrap: wrap;
     }
 }
 @media screen and (max-width: 482px){
+    .head{
+        padding: 5px;
+        width: 100%;
+        justify-content: space-around;
+    }
+    .logo{
+        padding: 30px 0;
+    }
     .search-box div{
-        width: 400px;
+        width: 300px;
+        padding: 10px;
     }
     input{
         width: 287px;
     }
+    .languages{
+        height: fit-content;
+        padding: 30px 0;
+    }
+    .languages span{
+        display: block;
+        margin: 10px;
+    }
+    footer{
+        position: fixed;
+        bottom: 0;
+    }
     .footer-links{
-        padding: 0 70px;
-        justify-content: space-evenly;
+        padding: 0 40px;
+        justify-content: space-around;
         flex-direction: column;
         flex-wrap: wrap;
+    }
+    .footer-links a, .footer-links button{
+        display: inline-block;
+        margin: 4px 0;
+        padding: 5px;
     }
 }
