--- a/index.css
+++ b/index.css
@@ -93,6 +93,9 @@ svg{
     box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
     border-color: rgba(223,225,229,0);
 }
+.search-box .voice{
+    cursor: pointer;
+}
 input{
     width: 487px;
     border: none;
