--- a/index.css
+++ b/index.css
@@ -117,6 +117,7 @@ input{
     padding: 12px 20px;
     text-align: center;
     cursor: pointer;
+    outline: none;
 }
 .btn .btn-btn:hover{
     box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
