--- a/index.css
+++ b/index.css
@@ -175,6 +175,9 @@ footer a, button{
     font-size: 16px;
     font-weight: 500;
 }
+footer button{
+    background-color: transparent;
+}
 footer a:hover, footer button:hover{
     text-decoration: underline;
 }
